# ai-coach2

./: .replit  LICENSE  README.md  app.py  database.py  extentions.txt  file_up_down.py  pyproject.toml  requirements.txt
static/: test.txt
templates/: base.html  dashboard.html  download_file.html  footer.html  home.html  index.html  jobitem.html  login.html  nav.html  navbar.html  signup.html  upload_file.html  users.html
