[tool.poetry]
name = "repl_nix_ai-coach2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
SQLAlchemy = "^2.0.15"
Flask-Migrate = "^4.0.4"
Flask-SQLAlchemy = "^3.0.3"
Flask-Login = "^0.6.2"
oauthlib = "^3.2.2"
Authlib = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
